# GenX

./: .gitmodules  CMakeLists.txt  CompileShaders.bat  README.md
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Engine/: CMakeLists.txt
Engine/shaders/: basic.frag  basic.vert  common.glsl
Engine/src/: Application.cpp  Application.h  Buffers.h  Core.h  EntryPoint.h  Layer.h  Logger.cpp  Logger.h  Shader.h  TimeStep.h  Utils.cpp  Vertex.h  pch.h  stb_image_impl.cpp  utils.cpp  utils.h
Engine/src/Actor/: Actor.h  CameraActor.cpp  CameraActor.h  GameObject.cpp  GameObject.h
Engine/src/ECS/: Component.h  ECS.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityManagerOLD.cpp  EntityManagerOLD.h  System.h
Engine/src/ECS/Components/: CameraComponent.cpp  CameraComponent.h  CameraController.cpp  CameraController.h  EditorCameraController.cpp  EditorCameraController.h  ModelComponent.h  PhysicsComponent.h  TagComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/src/ECS/Systems/: CameraSystem.h  ModelManager.h  ModelSystem.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsSystem.h
Engine/src/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Input/: InputHandler.cpp  InputHandler.h
Engine/src/Layers/: CameraLayer.cpp  CameraLayer.h  ModelLayer.cpp  ModelLayer.h  PhysicsLayer.cpp  PhysicsLayer.h
Engine/src/Renderer/: Buffer.cpp  Buffer.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  FrameInfo.h  Image.cpp  Image.h  ImguiRenderer.cpp  ImguiRenderer.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  PointLightSystem.cpp  PointLightSystem.h  PrimitiveModels.cpp  PrimitiveModels.h  RenderPass.cpp  RenderPass.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  UniformBuffer.h  Window.cpp  Window.h
cmake/: Shaders.cmake
engine/: CMakeLists.txt
engine/source/: Engine.cpp
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.h
shaders/: basic.vert.spv
source/: main.cpp
